# lapunti_attendance_tracking_system

./: pyproject.toml
docs/: openapi.json
scripts/: build_app.sh  generate_openapi_doc.sh  install_requirements.sh  run_app.sh  update_requirements.sh
src/: __init__.py  app.py  event.py  pyproject.toml  requirements.in  requirements.txt
src/controllers/: attendance_post_images_controller.py
src/models/: attendance_models.py
src/models/attendance/: upload_image.py
src/routers/: attendance.py  attendance_router.py
src/tests/: conftest.py  test_app.py
src/utils/: generate_openapi_doc.py
utils/: generate_openapi_doc.py
