[project]
name = "lapunti_attendance_tracking_system_api"
version = "1.0"
description = ""
requires-python = ">=3.14"

[tool.mypy]
cache_dir = "output/.mypy_cache"
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
cache-dir = "output/.ruff_cache"
exclude = [
    ".venv", 
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".pytest_cache",
    "__pypackages__"
]
line-length = 88
src = ["src"]
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "B"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "INP001"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
